@@ -592,3 +592,5 @@ $l['showAll']='ปรากฏรายการทั้งหมด';
 $l['multiselectSelected']='รายการที่ถูกเลือก'; 
 $l['selectMonthlyDay']= 'กรุณาเลือกหนึ่งวันในสัปดาห์สำหรับการทำรายการซ้ำในแต่ละเดือน'; 
 $l['selectWeekOfMonth']= 'กรุณาเลือกจำนวนวันต่อสัปดาห์สำหรับรายการซ้ำในแต่ละเดือน'; 
+
+$l['extjs_lang']='th-utf8';
